--- a/style.css
+++ b/style.css
@@ -9,9 +9,6 @@ header {
     background: white;
     border: 5px solid black;
 }
-main {
-    display: flex column;
-}
 section {
         height: 400px;
         margin: 50px;
@@ -36,7 +33,7 @@ nav ul {
     display: flex;
     position: absolute;
     bottom: 0;
-    left: 300px;
+    left: 20%;
 }
 .menu {
     padding: 20px;
@@ -60,7 +57,7 @@ nav ul {
 }
 .meilleur_film_image {
     display: flex;
-    weight: 100%;
+    height: 100%;
     width: 100%;
 }
 #titre_meilleur_film {
@@ -100,6 +97,10 @@ nav ul {
   display: block;
   width: 182px;
   height: 268px;
+}
+
+.item__image {
+    display: flex;
 }
 
 .item__body {
@@ -200,26 +201,26 @@ nav ul {
 
 /* Modal (background) */
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  display: none;
+  position: fixed;
+  z-index: 1;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
 }
 
 /* Modal Content/Box */
 .modal-content {
   position: relative;
   background-color: black;
-  margin: 15% auto; /* 15% from the top and centered */
+  margin: 15% auto;
   padding: 20px;
   border: 1px solid red;
-  width: 80%; /* Could be more or less, depending on screen size */
+  width: 80%;
   color: white;
   text-align: justify;
 }
